--- a/_includes/side-panel.html
+++ b/_includes/side-panel.html
@@ -18,7 +18,7 @@
         <p class="panel-cover__description">{{ site.welcome_message }}</p>
         {% endif %}
         
-        <!-- <div class="navigation-wrapper">
+        <div class="navigation-wrapper">
           <div>
             <nav class="cover-navigation cover-navigation--primary">
               <ul class="navigation">
@@ -32,7 +32,7 @@
           
           <div>{% include social.html %}</div>
         </div>
-      </div> -->
+      </div>
     </div>
     
     {% if site.cover_color %}
